fix requestAnimationFrame issue on ios 7 devices. fix #1

--- a/css/progress.css
+++ b/css/progress.css
@@ -1,7 +1,8 @@
 .pie_progress {
   text-align: center;
   position: relative;
-  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
 .pie_progress svg {
   margin: 0 auto;
@@ -14,7 +15,10 @@
   position: absolute;
   top: 50%;
   left: 0;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+       -o-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 .pie_progress__number {
   font-size: 42px;
